--- a/.github/workflows/split-monorepo.yml
+++ b/.github/workflows/split-monorepo.yml
@@ -7,6 +7,10 @@ on:
     tags:
       - '*'
 
+concurrency:
+  group: split-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   split:
     runs-on: ubuntu-latest
@@ -16,65 +20,70 @@ jobs:
       fail-fast: false
       matrix:
         package:
-          - name: 'amphp-pool'
-            directory: 'packages/amphp-pool'
-          - name: 'application'
-            directory: 'packages/application'
-          - name: 'async-contracts'
-            directory: 'packages/async-contracts'
-          - name: 'configuator-toml'
-            directory: 'packages/configuator-toml'
-          - name: 'configurator-ini'
-            directory: 'packages/configurator-ini'
-          - name: 'console'
-            directory: 'packages/console'
-          - name: 'design-patterns'
-            directory: 'packages/design-patterns'
-          - name: 'di'
-            directory: 'packages/di'
-          - name: 'events'
-            directory: 'packages/events'
-          - name: 'ifcastle-amphp-engine'
-            directory: 'packages/ifcastle-amphp-engine'
-          - name: 'ifcastle-amphp-logger'
-            directory: 'packages/ifcastle-amphp-logger'
-          - name: 'ifcastle-amphp-web-server'
-            directory: 'packages/ifcastle-amphp-web-server'
-          - name: 'ifcastle-codestyle'
-            directory: 'packages/ifcastle-codestyle'
-          - name: 'ifcastle-monolog'
-            directory: 'packages/ifcastle-monolog'
-          - name: 'ifcastle-package-installer'
-            directory: 'packages/ifcastle-package-installer'
-          - name: 'ifcastle-swoole-engine'
-            directory: 'packages/ifcastle-swoole-engine'
-          - name: 'os-utilities'
-            directory: 'packages/os-utilities'
-          - name: 'php-open-telemetry'
-            directory: 'packages/php-open-telemetry'
-          - name: 'protocol-contracts'
-            directory: 'packages/protocol-contracts'
-          - name: 'rest-api'
-            directory: 'packages/rest-api'
-          - name: 'service-manager'
-            directory: 'packages/service-manager'
-          - name: 'type-definitions'
-            directory: 'packages/type-definitions'
-          - name: 'user-manager'
-            directory: 'packages/user-manager'
+          - 'amphp-pool'
+          - 'application'
+          - 'async-contracts'
+          - 'configuator-toml'
+          - 'configurator-ini'
+          - 'console'
+          - 'design-patterns'
+          - 'di'
+          - 'events'
+          - 'ifcastle-amphp-engine'
+          - 'ifcastle-amphp-logger'
+          - 'ifcastle-amphp-web-server'
+          - 'ifcastle-codestyle'
+          - 'ifcastle-monolog'
+          - 'ifcastle-package-installer'
+          - 'ifcastle-swoole-engine'
+          - 'os-utilities'
+          - 'php-open-telemetry'
+          - 'protocol-contracts'
+          - 'rest-api'
+          - 'service-manager'
+          - 'type-definitions'
+          - 'user-manager'
 
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
-      - name: Split ${{ matrix.package.name }}
-        uses: symplify/monorepo-split-github-action@2.1
-        with:
-          package_directory: ${{ matrix.package.directory }}
-          repository_organization: 'IFCastle'
-          repository_name: ${{ matrix.package.name }}
-          user_name: "github-actions[bot]"
-          user_email: "github-actions[bot]@users.noreply.github.com"
-        env:
-          GITHUB_TOKEN: ${{ secrets.SPLIT_TOKEN }}
+      - name: Install git-filter-repo
+        run: |
+          wget -q https://raw.githubusercontent.com/newren/git-filter-repo/main/git-filter-repo
+          chmod +x git-filter-repo
+          sudo mv git-filter-repo /usr/local/bin/
+
+      - name: Split ${{ matrix.package }}
+        run: |
+          PACKAGE_NAME="${{ matrix.package }}"
+          REPO_URL="https://${{ secrets.SPLIT_TOKEN }}@github.com/IFCastle/${PACKAGE_NAME}.git"
+          TARGET_BRANCH="${{ github.ref_name }}"
+
+          echo "Splitting package: $PACKAGE_NAME"
+          echo "Target branch: $TARGET_BRANCH"
+
+          # Clone to temporary directory
+          git clone --no-checkout . temp-repo
+          cd temp-repo
+
+          # Checkout the target branch
+          git checkout "$TARGET_BRANCH"
+
+          # Filter repository to extract only this package and move to root
+          git-filter-repo \
+            --path "packages/$PACKAGE_NAME/" \
+            --path-rename "packages/$PACKAGE_NAME/":"" \
+            --force
+
+          # Configure git
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Set remote and push
+          git remote add split-origin "$REPO_URL"
+
+          echo "Pushing to $REPO_URL"
+          git push split-origin "HEAD:$TARGET_BRANCH" --force
